-
Bug
-
Resolution: Fixed
-
P0: Blocker
-
6.9
-
None
-
d8d6de347 (dev), 89d5b5eb6 (6.8), 0cabe26f3 (dev), 0091a0a23 (6.8)
-
Foundation Sprint 118
/home/qt/work/qt/qt5compat/src/core5/serialization/qbinaryjson_p.h:226:38: error: no matching function for call to ‘QChar::QChar(const qle_ushort&)’
226 | ch[i] = QChar(d->utf16[i]);
| ^
In file included from /home/qt/work/install/target/include/QtCore/qstring.h:14,
from /home/qt/work/install/target/include/QtCore/qhashfunctions.h:9,
from /home/qt/work/install/target/include/QtCore/qfloat16.h:10,
from /home/qt/work/install/target/include/QtCore/qmetatype.h:15,
from /home/qt/work/install/target/include/QtCore/qcborcommon.h:8,
from /home/qt/work/install/target/include/QtCore/qcborvalue.h:8,
from /home/qt/work/install/target/include/QtCore/qjsonvalue.h:7,
from /home/qt/work/install/target/include/QtCore/qjsondocument.h:8,
from /home/qt/work/qt/qt5compat/src/core5/serialization/qbinaryjson.h:7,
from /home/qt/work/qt/qt5compat/src/core5/serialization/qbinaryjson_p.h:19,
from /home/qt/work/qt/qt5compat/src/core5/serialization/qbinaryjson.cpp:4:
/home/qt/work/install/target/include/QtCore/qchar.h:149:43: note: candidate: ‘template<class Char, typename std::enable_if<std::is_same<Char, unsigned char>::value, bool>::type <anonymous> > constexpr QChar::QChar(Char)’
149 | QT_ASCII_CAST_WARN constexpr explicit QChar(const Char c) noexcept : ucs(c) { }
Details: https://testresults.qt.io/coin/integration/qt/qt5compat/tasks/1729654128
Tested changes (refs/builds/qtci/dev/1729653791):
https://codereview.qt-project.org/c/qt/qt5compat/+/599102/2 Update dependencies on 'dev' in qt/qt5compat
| For Gerrit Dashboard: QTBUG-130392 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 599189,2 | QBinaryJson: don't rely on old QChar ctor conversions | dev | qt/qt5compat | Status: MERGED | +2 | 0 |
| 599199,2 | QBinaryJson: increase compiler coverage of toString() | dev | qt/qt5compat | Status: MERGED | +2 | 0 |
| 599266,2 | QBinaryJson: don't rely on old QChar ctor conversions | 6.8 | qt/qt5compat | Status: MERGED | +2 | 0 |
| 599504,2 | QBinaryJson: increase compiler coverage of toString() | 6.8 | qt/qt5compat | Status: MERGED | +2 | 0 |