QBinaryJson: don't rely on old QChar ctor conversions

Don't cast qle_ushort to QChar. The implicit conversion to int, which
this relies on, has been disabled as of
qtbase/9ef4c123c39c642357c9e8530d59f32f220a7824.

Cast it to char16_t instead, which is the future-proof way to do such
things.

Pick-to: 6.8
Fixes: QTBUG-130392
Change-Id: Ie2691d4dca072b0da8af86e8df0b97c661d88f14
Reviewed-by: Juha Vuolle <juha.vuolle@qt.io>